--- a/frontend/package.json
+++ b/frontend/package.json
@@ -2,6 +2,7 @@
   "name": "explorador-archivos-frontend",
   "version": "1.0.0",
   "private": true,
+  "homepage": "https://directoryofsites.github.io/contenedor",
   "dependencies": {
     "@testing-library/dom": "^10.4.0",
     "@testing-library/jest-dom": "^6.6.3",
@@ -16,7 +17,9 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build"
   },
   "eslintConfig": {
     "extends": [
@@ -36,6 +39,8 @@
       "last 1 safari version"
     ]
   },
-"proxy": "http://localhost:3000",
-  "homepage": "https://directoryofsites.github.io/contenedor"
+  "proxy": "http://localhost:3000",
+  "devDependencies": {
+    "gh-pages": "^6.3.0"
+  }
 }
