--- a/frontend/package.json
+++ b/frontend/package.json
@@ -1,8 +1,8 @@
 {
-  "name": "explorador-archivos-frontend",
+  "name": "gracia-y-vida-frontend",
   "version": "1.0.0",
   "private": true,
-  "homepage": "https://directoryofsites.github.io/contenedor",
+  "homepage": "https://directoryofsites.github.io/Gracia_y_Vida",
   "dependencies": {
     "@testing-library/dom": "^10.4.0",
     "@testing-library/jest-dom": "^6.6.3",
