--- a/backend/package.json
+++ b/backend/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "contenedor-backend",
+  "name": "gracia-y-vida-backend",
   "version": "1.0.0",
   "description": "Backend para el explorador de archivos",
   "main": "server.js",
