--- a/backend/package.json
+++ b/backend/package.json
@@ -11,10 +11,13 @@
     "mammoth": "^1.9.0",
     "multer": "^1.4.5-lts.1"
   },
+ 
   "scripts": {
-    "start": "node server.js",
-    "dev": "nodemon server.js"
-  },
+  "start": "SUPABASE_URL=https://xgsldajgndlygljgpenm.supabase.co SUPABASE_KEY=eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJpc3MiOiJzdXBhYmFzZSIsInJlZiI6Inhnc2xkYWpnbmRseWdsamdwZW5tIiwicm9sZSI6InNlcnZpY2Vfcm9sZSIsImlhdCI6MTc0MjA4MjQyMSwiZXhwIjoyMDU3NjU4NDIxfQ.vtXxp79SPq725udOBJ7aGVrJXAc2DPwziswQIk_a_A8 BUCKET_NAME=graciayvida node server.js",
+  "dev": "nodemon server.js"
+},
+
+
   "author": "",
   "license": "ISC",
   "devDependencies": {
