--- a/backend/package.json
+++ b/backend/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "gracia-y-vida-backend",
+ "name": "master-backend",
   "version": "1.0.0",
   "description": "Backend para el explorador de archivos",
   "main": "server.js",
@@ -12,8 +12,8 @@
     "multer": "^1.4.5-lts.1"
   },
  
-  "scripts": {
-  "start": "SUPABASE_URL=https://xgsldajgndlygljgpenm.supabase.co SUPABASE_KEY=eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJpc3MiOiJzdXBhYmFzZSIsInJlZiI6Inhnc2xkYWpnbmRseWdsamdwZW5tIiwicm9sZSI6InNlcnZpY2Vfcm9sZSIsImlhdCI6MTc0MjA4MjQyMSwiZXhwIjoyMDU3NjU4NDIxfQ.vtXxp79SPq725udOBJ7aGVrJXAc2DPwziswQIk_a_A8 BUCKET_NAME=graciayvida node server.js",
+"scripts": {
+  "start": "SUPABASE_URL=https://cjhbhfvkcwwpnhqixlwd.supabase.co SUPABASE_KEY=eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJpc3MiOiJzdXBhYmFzZSIsInJlZiI6ImNqaGJoZnZrY3d3cG5ocWl4bHdkIiwicm9sZSI6InNlcnZpY2Vfcm9sZSIsImlhdCI6MTc0MjMxOTYyNCwiZXhwIjoyMDU3ODk1NjI0fQ.RSRvD2NX-R9tT4pk7-Q4l_H-MqQH-VK666DyLbmkvrY BUCKET_NAME=master node server.js",
   "dev": "nodemon server.js"
 },
 
