--- a/backend/package.json
+++ b/backend/package.json
@@ -5,6 +5,7 @@
  "main": "server.js",
  "dependencies": {
   "@supabase/supabase-js": "^2.49.1",
+  "archiver": "^7.0.1",
   "bcrypt": "^5.1.1",
   "cors": "^2.8.5",
   "dotenv": "^16.4.7",
