--- a/backend/nixpacks.toml
+++ b/backend/nixpacks.toml
@@ -1,7 +1,18 @@
 [phases.setup]
-nixPkgs = ["python39", "python39Packages.pip"]
+nixPkgs = [
+  "python310",
+  "python310Packages.pip",
+  "python310Packages.setuptools",
+  "python310Packages.wheel"
+]
 
 [phases.install]
 cmds = [
-  "pip install python-docx requests whisper openai"
+  "python -m pip install --upgrade pip",
+  "python -m pip install python-docx requests openai ffmpeg-python",
+  "python -m pip install -U openai-whisper",
+  "echo 'Python y dependencias instaladas correctamente'"
 ]
+
+[start]
+cmd = "node server.js"
