--- a/backend/nixpacks.toml
+++ b/backend/nixpacks.toml
@@ -1,18 +1,16 @@
 [phases.setup]
 nixPkgs = [
-  "python310",
-  "python310Packages.pip",
-  "python310Packages.setuptools",
-  "python310Packages.wheel"
+  "python39",
+  "python39Packages.pip",
+  "ffmpeg"
 ]
 
 [phases.install]
 cmds = [
-  "python -m pip install --upgrade pip",
-  "python -m pip install python-docx requests openai ffmpeg-python",
-  "python -m pip install -U openai-whisper",
-  "echo 'Python y dependencias instaladas correctamente'"
+  "cd backend",
+  "npm install",
+  "pip install SpeechRecognition pydub python-docx requests"
 ]
 
 [start]
-cmd = "node server.js"
+cmd = "cd backend && node server.js"
