--- a/backend/nixpacks.toml
+++ b/backend/nixpacks.toml
@@ -2,14 +2,24 @@
 nixPkgs = [
   "python39",
   "python39Packages.pip",
-  "ffmpeg"
+  "python39Packages.setuptools",
+  "python39Packages.wheel",
+  "ffmpeg",
+  "gcc"
 ]
 
 [phases.install]
+aptPkgs = [
+  "portaudio19-dev",
+  "libpython3-dev",
+  "python3-pyaudio"
+]
 cmds = [
   "cd backend",
   "npm install",
-  "pip install SpeechRecognition pydub python-docx requests"
+  "python3 -m pip install --upgrade pip",
+  "python3 -m pip install SpeechRecognition pydub python-docx requests pyaudio",
+  "python3 -c 'import speech_recognition; print(\"SpeechRecognition instalado correctamente\")'"
 ]
 
 [start]
