--- a/backend/package.json
+++ b/backend/package.json
@@ -4,12 +4,14 @@
  "description": "Backend para el explorador de archivos",
  "main": "server.js",
  "dependencies": {
-  "@supabase/supabase-js": "^2.49.1",
+  "@supabase/supabase-js": "^2.49.4",
+  "adm-zip": "^0.5.16",
   "archiver": "^7.0.1",
   "bcrypt": "^5.1.1",
   "cors": "^2.8.5",
-  "dotenv": "^16.4.7",
+  "dotenv": "^16.5.0",
   "express": "^4.21.2",
+  "extract-zip": "^2.0.1",
   "mammoth": "^1.9.0",
   "multer": "^1.4.5-lts.1",
   "pdf-parse": "^1.1.1",
