--- a/frontend/package.json
+++ b/frontend/package.json
@@ -2,13 +2,16 @@
   "name": "master-backend",
   "version": "1.0.0",
   "private": true,
-"homepage": "https://directoryofsites.github.io/master",
+  "homepage": "https://directoryofsites.github.io/master",
   "dependencies": {
     "@testing-library/dom": "^10.4.0",
     "@testing-library/jest-dom": "^6.6.3",
     "@testing-library/react": "^16.2.0",
     "@testing-library/user-event": "^13.5.0",
+    "axios": "^1.9.0",
+    "bootstrap": "^5.3.6",
     "react": "^19.0.0",
+    "react-bootstrap": "^2.10.9",
     "react-dom": "^19.0.0",
     "react-scripts": "5.0.1",
     "web-vitals": "^2.1.4"
