--- a/backend/package.json
+++ b/backend/package.json
@@ -14,6 +14,7 @@
   "extract-zip": "^2.0.1",
   "mammoth": "^1.9.0",
   "multer": "^1.4.5-lts.1",
+  "node-cache": "^5.1.2",
   "pdf-parse": "^1.1.1",
   "uuid": "^11.1.0"
  },
